More work on Hedera support